--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nested-mutations",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Query example with asynchonous service",
   "main": "index.js",
   "scripts": {
@@ -10,13 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "nodemon": "^1.17.3"
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^2.0.2"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "graphql": "^0.13.2",
-    "graphql-server-express": "^1.3.6",
-    "graphql-tools": "^3.0.1"
+    "apollo-server-express": "^2.9.16",
+    "express": "^4.17.1",
+    "graphql": "^14.5.8",
+    "graphql-tools": "^4.0.6"
   }
 }
